improved styling and typos

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
   
-  <title>Teja Mantena</title>
+  <title>Hi! I'm Teja Mantena</title>
  
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
   <link href="./assets/css/style.css" rel="stylesheet" />
 </head>
 
@@ -14,7 +16,7 @@
 
   <img src="assets/images/banner.jpg" class="hero-hero">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Teja Mantena</a>
+    <a class="navbar-brand" href="#">Hi! I'm Teja Mantena</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -50,7 +52,7 @@
       </div>
 
       <div class="col-12 col-md-8 col-xl-9">
-        <p>Full Stack web developer with a background in manufacturing and process engineering. Geared towards implementing skills learned from UNC Chapel Hill full stack web development boot camp to streamline integration across different production equipment in a small to medium production environment.  Passionate about creating a web-based solution for production environments that struggle to keep real-time metrics such as operator errors, machine run times, assembly times and scrap rates. Skills learned in boot camp during boot camp include: JavaScript, JQuery, CSS, React and Agile. Excited to leverage my newly developed skills to make an impact on the bottom line. </p>
+        <p>Full Stack web developer with a background in manufacturing and process engineering. Geared towards implementing skills learned from UNC Chapel Hill full stack web development boot camp to streamline integration across different production equipment in a small to medium manufacturimng environment.  Passionate about creating a web-based solution for production environments that struggle to keep real-time metrics such as operator errors, machine run times, assembly times and scrap rates. Skills learned during boot camp include: JavaScript, JQuery, CSS, React and Agile. Excited to leverage my newly developed skills to make an impact on the bottom line. </p>
         </div>
     </div>
 
@@ -58,7 +60,7 @@
       <!-- Use col-* classes for different column sizes on different screens -->
       <div class="col-12 col-md-4 col-xl-3">
         <h3>Work</h3>
-      </div>
+      </div> 
       <div class="col-12 col-md-8 col-xl-9">
         <section class="wrapper">
           <div class="container-fostrap">
@@ -77,7 +79,7 @@
                           <a href="https://tmantena1.github.io/Strong-Password-Generator/">Strong Password Generator
                           </a>
                         </h4>
-                        <p class="">
+                        <p class="card-description">
                           Generate a strong password. 
                         </p>
                       </div>
@@ -101,7 +103,7 @@
                           <a href="https://tmantena1.github.io/code-quiz/"> Web Dev. Code Quiz
                           </a>
                         </h4>
-                        <p class="">
+                        <p class="card-description">
                           Timed code quiz. 
                         </p>
                       </div>
@@ -125,7 +127,7 @@
                           <a href="https://tmantena1.github.io/work-day-scheduler/"> Day planner
                           </a>
                         </h4>
-                        <p class="">
+                        <p class="card-description">
                           Simple app to plan your work day. 
                         </p>
                       </div>
@@ -151,7 +153,7 @@
                             Recipe App
                           </a>
                         </h4>
-                        <p class="">
+                        <p class="card-description">
                           Search for recipes.
                         </p>
                       </div>
@@ -177,7 +179,7 @@
                           <a href="https://tmantena1.github.io/weather-dashboard/">Weather App
                           </a>
                         </h4>
-                        <p class="">
+                        <p class="card-description">
                           Check the waether in various cities.
                         </p>
                       </div>
@@ -203,7 +205,7 @@
                             Stock and Crypto
                           </a>
                         </h4>
-                        <p class="">
+                        <p class="card-description">
                           Check crypto and stock prices side by side.
                         </p>
                       </div>
@@ -228,7 +230,7 @@
       <!-- Use col-* classes for different column sizes on different screens -->
       <div class="col-12 col-md-4 col-xl-3">
         <h3 class="flex-child side-header-2">Contact Me</h3>
-      </div>
+      </div> 
 
       <div class="col-12 col-md-8 col-xl-9">
         <article id="contact-me" class="flex-container">
@@ -256,7 +258,7 @@
 
   <!-- Footer-->
   <footer class="footer bg-black small text-center text-white-50">
-    <div class="container px-4 px-lg-5">Copyright &copy; Your Website 2021</div>
+    <div class="container px-4 px-lg-5">Copyright &copy; Teja Mantena 2021</div>
   </footer>
 
   <script src="js/scripts.js"></script>
