--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
 
-  <img src="assets/images/banner.jpg" class="hero-hero">
+  
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Hi! I'm Teja Mantena</a>
+    <a class="navbar-brand" href="#">Teja Mantena</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -36,11 +36,12 @@
           <a class="nav-link" href="#contact-me">Contact Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#resume">Resume</a>
+          <a class="nav-link" href="https://www.dropbox.com/s/71l7nr9njdswjv6/Resume.pdf?dl=0">Resume</a>
         </li>
       </ul>
     </div>
   </nav>
+  <img src="assets/images/banner.jpg" class="hero-hero">
 
   <!-- Two column layout -->
   <section class="container my-5">
