--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Teja Mantena</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -41,7 +40,11 @@
       </ul>
     </div>
   </nav>
-  <img src="assets/images/banner.jpg" class="hero-hero">
+  <div class="hero-image">
+    <div class="hero-text">
+      <h1>Teja Mantena</h1>
+    </div>
+  </div>
 
   <!-- Two column layout -->
   <section class="container my-5">
@@ -259,7 +262,7 @@
 
   <!-- Footer-->
   <footer class="footer bg-black small text-center text-white-50">
-    <div class="container px-4 px-lg-5">Copyright &copy; Teja Mantena 2021</div>
+    <div class="container px-4 px-lg-5">Copyright &copy; 2021</div>
   </footer>
 
   <script src="js/scripts.js"></script>
